syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "ar.edu.itba.pod.grpc";
option java_multiple_files = true;

service QueryService {
  rpc GetSuggestedCapacities(DayOfYearRequest) returns (SuggestedCapacitiesResponse);
  rpc GetConfirmedReservations(DayOfYearRequest) returns (ConfirmedReservationsResponse);
}

message DayOfYearRequest {
  int32 dayOfYear = 1;
}

enum SuggestedCapacityStatus {
  SUGGESTED_CAPACITY_STATUS_UNKNOWN = 0;
  SUGGESTED_CAPACITY_STATUS_SUCCESS = 1;
  SUGGESTED_CAPACITY_STATUS_INVALID_DAY = 2;
}

message SuggestedCapacity {
  string attractionName = 1;
  int32 maxPendingReservations = 2;
  string slotWithMaxReservations = 3;
}

message SuggestedCapacitiesResponse {
  SuggestedCapacityStatus status = 1;
  repeated SuggestedCapacity suggestedCapacity = 2;
}

enum ConfirmedCapacityStatus {
  CONFIRMED_RESERVATION_STATUS_UNKNOWN = 0;
  CONFIRMED_RESERVATION_STATUS_SUCCESS = 1;
  CONFIRMED_RESERVATION_STATUS_INVALID_DAY = 2;
}

message ConfirmedReservationsResponse {
  ConfirmedCapacityStatus status = 1;
  repeated ConfirmedReservation confirmedReservation = 2;
}

message ConfirmedReservation {
  string attractionName = 1;
  string visitorId = 2;
  string slot = 3;
}
